# tetris-game

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: functionality.h  pieces.h  utils.h
src/: functionality.cpp  main.cpp
